--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,7 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+Demo/Audio/Cloistered Vinyl.wav
+Demo/Audio/Cloistered Vinyl.wav.meta
+Demo/Audio/Time Goes By.wav
+Demo/Audio/Time Goes By.wav.meta
